<resources>
    <string name="app_name">SpendUp</string>
    <string name="text_save_transaction">Save Transaction</string>
    <string name="text_ui_mode">UI Mode</string>
    <string name="text_expense_when">When</string>
    <string name="text_expense_amount">Amount</string>
    <string name="text_expense_transaction_type">Transaction type</string>
    <string name="text_expense_tag">Tag</string>
    <string name="text_expense_note">Note</string>
    <string name="text_expense">$</string>
    <string name="success_transaction_delete">Transaction deleted successfully!</string>
    <string name="text_title">Title</string>
    <string name="text_createdAt">Created At</string>
    <string name="empty_field">%s must not be empty</string>
    <string name="add_tag">Add Tag</string>
    <string name="empty_text">Empty Wallet add more data</string>
    <string name="welcome_caption">Let\'s spend less money to achieve more</string>
    <string name="hello_message">Hello, %s!</string>
    <string name="username">Username</string>
    <string name="save_username">Save Username</string>
</resources>